# kulumasiina-v2

./: .dockerignore  .env.example  .eslintrc.js  .gitignore  .lintstagedrc.mjs  .lintstagedrc.ts  .oxfmtrc.json  .oxlintrc.json  .pre-commit-config.yaml  .prettierrc  .prettierrc.json  .python-version  CLAUDE.md  Dockerfile  Dockerfile.api  Dockerfile.front.dev  Dockerfile.server  Dockerfile.server.prod  LICENSE  README.md  docker-compose.prod.yaml  docker-compose.yaml  docker-compose.yml  drizzle.config.ts  eslint.config.js  eslint.config.mjs  eslint.config.ts  global.d.ts  next.config.ts  nginx.conf  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  postcss.config.js  pyproject.toml  tsconfig.json  update-deployment.sh
.cursor/rules/: conventional-commits.mdc  (+1 more)
backend/: README.md  requirements.txt  run.py  setup.cfg
docker/: Dockerfile.api  Dockerfile.front.dev  Dockerfile.nginx.prod  nginx.conf
docs/: customization.md  deployment.md  development.md  oauth-setup.md
frontend/: .dockerignore  App.css  App.tsx  Dockerfile  env.d.ts  i18n.ts  index.html  index.tsx  package-lock.json  package.json  tsconfig.json  vite.conf.ts  vite.config.ts
kulumasiina_backend/: __main__.py  api.py  bookkeeping_accounts.py  crud.py  csv_util.py  db.py  models.py  pdf_util.py  schemas.py
messages/: en.json  fi.json
patches/: @tanstack__table-core.patch
src/: instrumentation.ts  middleware.ts  proxy.ts
src/app/: layout.tsx  (+4 more)
tests/: admin-access.spec.ts  admin-actions.spec.ts  api-access.spec.ts  expense-form.spec.ts  navigation.spec.ts
(+194 files in other folders)
