[project]
name = "Kulumasiina"
version = "0.0.1"
description = "Cost reimbursement system"
authors = [
    {name = "Fyysikkokilta ry", email = "it@fyysikkokilta.fi"},
]
dependencies = [
    "uvicorn>=0.24.0.post1",
    "fastapi>=0.104.1",
    "sqlalchemy>=2.0.23",
    "fastapi-sso>=0.9.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.6",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[tool.setuptools]
py-modules = ["kulumasiina_backend"]

[tool.pdm.scripts]
run-docker = "docker compose up --build"
run.call = "kulumasiina_backend.__main__:run"
run.env_file = ".env"
